--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,9 +19,13 @@ jobs:
         shell: bash
     steps:
       - uses: actions/checkout@v3
+      - name: Install dependencies
+        run: |
+          pip3 install jstyleson
       - name: Validate json
         run: |
           python3 .github/validate_json.py
+
   validate_mod_json:
     needs: validate_json
     runs-on: ubuntu-latest
@@ -30,9 +34,13 @@ jobs:
         shell: bash
     steps:
       - uses: actions/checkout@v3
+      - name: Install dependencies
+        run: |
+          pip3 install jstyleson
       - name: Validate mod json
         run: |
           python3 .github/validate_mod_json.py
+
   update_size:
     needs: validate_json
     runs-on: ubuntu-latest
@@ -41,6 +49,9 @@ jobs:
         shell: bash
     steps:
       - uses: actions/checkout@v3
+      - name: Install dependencies
+        run: |
+          pip3 install jstyleson
       - name: Update size
         run: |
           python3 .github/update_size.py
