--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,27 +19,14 @@ jobs:
         shell: bash
     steps:
       - uses: actions/checkout@v3
-      - name: Install dependencies
-        run: |
-          pip3 install jstyleson
+        with:
+          fetch-depth: 0
+      - name: Set up Python environment
+        run: sudo apt update && sudo apt install -y python3 python3-pip
+      - name: Install jstyleson
+        run: pip3 install jstyleson
       - name: Validate json
-        run: |
-          python3 .github/validate_json.py
-
-  validate_mod_json:
-    needs: validate_json
-    runs-on: ubuntu-latest
-    defaults:
-      run:
-        shell: bash
-    steps:
-      - uses: actions/checkout@v3
-      - name: Install dependencies
-        run: |
-          pip3 install jstyleson
-      - name: Validate mod json
-        run: |
-          python3 .github/validate_mod_json.py
+        run: python3 .github/validate_json.py
 
   update_size:
     needs: validate_json
@@ -49,12 +36,15 @@ jobs:
         shell: bash
     steps:
       - uses: actions/checkout@v3
-      - name: Install dependencies
-        run: |
-          pip3 install jstyleson
+        with:
+          fetch-depth: 0
+      - name: Install jstyleson
+        run: pip3 install jstyleson
       - name: Update size
+        run: python3 .github/update_size.py
+      - name: Switch to develop branch
         run: |
-          python3 .github/update_size.py
+          git checkout develop
       - name: Commit changes
         uses: EndBug/add-and-commit@v9
         with:
