--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,6 +28,19 @@ jobs:
       - name: Validate json
         run: python3 .github/validate_json.py
 
+  validate_mod_json:
+    needs: validate_json
+    runs-on: ubuntu-latest
+    defaults:
+      run:
+        shell: bash
+    steps:
+      - uses: actions/checkout@v3
+      - name: Install jstyleson
+        run: pip3 install jstyleson
+      - name: Validate mod json
+        run: python3 .github/validate_mod_json.py
+
   update_size:
     needs: validate_json
     runs-on: ubuntu-latest
@@ -37,7 +50,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
         with:
-          fetch-depth: 0
+          fetch-depth: 0 
       - name: Install jstyleson
         run: pip3 install jstyleson
       - name: Update size
