--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -50,17 +50,27 @@ jobs:
     steps:
       - uses: actions/checkout@v3
         with:
-          fetch-depth: 0 
+          fetch-depth: 0
       - name: Install jstyleson
         run: pip3 install jstyleson
       - name: Update size
         run: python3 .github/update_size.py
-      - name: Switch to develop branch
+
+      - name: Determine branch and switch
+        id: branch_info
         run: |
-          git checkout develop
-      - name: Commit changes
+          if [ -z "$GITHUB_HEAD_REF" ]; then
+            branch_name=$(git symbolic-ref --short HEAD)
+          else
+            branch_name=$GITHUB_HEAD_REF
+          fi
+          echo "branch_name=$branch_name" >> $GITHUB_ENV
+          echo "Switched to branch: $branch_name"
+
+      - name: Commit changes to the correct branch
         uses: EndBug/add-and-commit@v9
         with:
           default_author: github_actions
           message: Update sizes
           add: '*.json'
+          push: --force
