--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,7 @@ on:
 
 jobs:
   validate_json:
-    if: github.event_name == 'pull_request'
+    if: ${{ github.event_name == 'pull_request' || github.event_name == 'schedule' || github.event_name == 'workflow_dispatch' }}
     runs-on: ubuntu-latest
     defaults:
       run:
@@ -30,7 +30,7 @@ jobs:
         run: python3 .github/validate_json.py
 
   validate_mod_json:
-    if: github.event_name == 'pull_request'
+    if: ${{ github.event_name == 'pull_request' || github.event_name == 'schedule' || github.event_name == 'workflow_dispatch' }}
     needs: validate_json
     runs-on: ubuntu-latest
     defaults:
@@ -44,8 +44,7 @@ jobs:
         run: python3 .github/validate_mod_json.py
 
   update_size:
-    if: github.event_name == 'push'
-    needs: validate_json
+    if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/develop' }}
     runs-on: ubuntu-latest
     defaults:
       run:
